--- a/package.json
+++ b/package.json
@@ -39,5 +39,6 @@
     "prettier": "^3.5.3",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1"
-  }
+  },
+  "packageManager": "pnpm@10.11.0"
 }
