--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@tailwindcss/postcss": "^4.1.7",
     "@tanstack/react-query": "^5.76.2",
     "@tanstack/react-query-devtools": "^5.76.2",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.511.0",
     "next": "^15.3.2",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
