chore(eslint): 최신 권장 설정 구성
- TypeScript, React, React Hooks, JSX A11y 설정 적용
- ESLint의 flat config 시스템으로 전환
- 사용되지 않는 기존 설정 제거

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,8 @@
     ".next/types/**/*.ts",
     "tailwind.config.js",
     "eslint.config.js",
-    "postcss.config.mjs"
+    "postcss.config.mjs",
+    "next.config.mjs"
   ],
   "exclude": ["node_modules"]
 }
