--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "@typescript-eslint/parser": "^8.32.1",
     "eslint": "^9.25.0",
     "eslint-config-next": "latest",
-    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "^5.4.0",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "prettier": "^3.5.3",
     "typescript": "~5.8.3",
