--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/postcss": "^4.1.7",
     "@tanstack/react-query": "^5.76.2",
     "@tanstack/react-query-devtools": "^5.76.2",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
